Fix Dark Mode

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ nav ul {
 #icon{
     width: 50px;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 1px;
     margin-left: 0px;
     margin-right: 10px;
 }
